"second commit: syntax correction"